Adding Bg to Side-bar, Nav & dividing Main Grid

--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Dashboard</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="page-wrapper">
-        <div class="main-wrapper">
-            <section class="dashboard_section">
-                <div class="page-padding">
-                    <div class="container">
-                        <div class="dashboard_wrapper">
-                            <div class="side-bar_wrapper"></div>
-                            <div class="nav-bar_wrapper"></div>
-                            <div class="projects_wrapper"></div>
-                            <div class="announcements_wrapper"></div>
-                            <div class="trending_wrapper"></div>
-                        </div>
-                    </div>
+      <div class="main-wrapper">
+        <section class="dashboard_section">
+          <div class="page-padding">
+            <div class="container">
+              <div class="dashboard_wrapper">
+                <div class="side-bar_wrapper"></div>
+                <div class="nav-bar_wrapper"></div>
+                <div class="projects_wrapper"></div>
+                <div class="right-side_wrapper">
+                    <div class="announcements_wrapper"></div>
+                    <div class="trending_wrapper"></div>
                 </div>
-            </section>
-        </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </div>
-</body>
+  </body>
 </html>
