--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="page-wrapper">
@@ -16,10 +23,12 @@
               <div class="dashboard_wrapper">
                 <div class="side-bar_wrapper"></div>
                 <div class="nav-bar_wrapper"></div>
-                <div class="projects_wrapper"></div>
+                <div class="projects_wrapper">
+                  <h3>Your Projects</h3>
+                </div>
                 <div class="right-side_wrapper">
-                    <div class="announcements_wrapper"></div>
-                    <div class="trending_wrapper"></div>
+                  <div class="announcements_wrapper"></div>
+                  <div class="trending_wrapper"></div>
                 </div>
               </div>
             </div>
