Finishing Profile Info

--- a/index.html
+++ b/index.html
@@ -167,7 +167,13 @@
                             <h4 id="profile-name">Ahmed Walid</h4>
                         </div>
                     </div>
-                    <div class="profile-info_wrapper"></div>
+                    <div class="profile-info_wrapper">
+                        <div class="avatar_img main-avatar" ></div>
+                        <div class="profile-name_wrapper">
+                            <p>Salam,</p>
+                            <h2>Ahmed Walid (@ahmed)</h2>
+                        </div>
+                    </div>
                     <div class="nav-options_wrapper"></div>
                 </div>
                 <div class="projects_wrapper">
