Finishing the three btns

--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
                             <h2>Ahmed Walid (@ahmed)</h2>
                         </div>
                     </div>
-                    <div class="nav-options_wrapper"></div>
+                    <div class="nav-options_wrapper">
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
+                    </div>
                 </div>
                 <div class="projects_wrapper">
                   <h3>Your Projects</h3>
