Finishing Trending Card

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
                       <div class="announce_wrapper">
                         <p>Site Maintenance</p>
                         <p class="p-light">
-                          Lorem ipsum dolor sit amet. Lorem ipsum dolor sit,
-                          amet consectetur adipisicing elit. Sed, rem!
+                          Lorem ipsum dolor sit dolor sit, amet consectetur
+                          adipisicing elit. Sed, rem!
                         </p>
                       </div>
                       <div class="divider"></div>
@@ -226,7 +226,7 @@
                         <p>Community Share Day</p>
                         <p class="p-light">
                           Lorem ipsum dolor . Lorem ipsum dolor sit, amet
-                          consectetur adipisicing elit. Sed, rem!
+                          consectetur, rem!
                         </p>
                       </div>
                       <div class="divider"></div>
@@ -241,7 +241,22 @@
                   </div>
                   <div class="trending_wrapper">
                     <h3>Trending</h3>
-                    <div class="trending-card"></div>
+                    <div class="trending-card">
+                      <div class="account-wrapper">
+                        <div class="avatar_img" id="morgan"></div>
+                        <div class="profile-name_wrapper">
+                          <p class="no-margin">@morgan</p>
+                          <p class="p-light">Super Cool Project</p>
+                        </div>
+                      </div>
+                      <div class="account-wrapper">
+                        <div class="avatar_img" id="kendall"></div>
+                        <div class="profile-name_wrapper">
+                          <p class="no-margin">@kendall</p>
+                          <p class="p-light">World Peace Builder</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
